--- a/Images/RegistrationForm.html
+++ b/Images/RegistrationForm.html
@@ -84,13 +84,14 @@ form .gender-details .gender-title{
     margin-top: 10px;
     font-size: 30px;
     width: 100%;
+    margin-left: 15px;
     /* background: linear-gradient(rgba(16,130,226,1) 0%, rgba(188,34,195,1) 100%,); */
 }
 .button{
     color: linear-gradient(135deg, rgba(16,130,226,1) 0%, rgba(188,34,195,1) 100%,);
 }
-.button:hover{
-   background-color: purple;
+.gender-title label{
+    margin-right: 30px;
 }
 </style>
 <body>
