--- a/Images/TotalMarks.html
+++ b/Images/TotalMarks.html
@@ -29,9 +29,9 @@
             color: chartreuse;
             font-size: xx-large;
         }
-        caption .date{
-            float: right;
-        }
+       .date{
+           text-align: right;
+       }
     </style>
 </head>
 
