--- a/Images/createElement.html
+++ b/Images/createElement.html
@@ -41,14 +41,16 @@ body{
         }       
     var ul = document.getElementById('ul1')
      var li = document.getElementById('box-1')
-     console.log(li)
+    //  console.log(li)
     ul.removeChild(li)
      var input = document.getElementById('input').value
     
-    console.log(ul)
+    // console.log(ul)
     var createli = document.createElement('li')
-    console.log(createli)
+    // console.log(createli)
     createli.innerHTML=input
+    console.lod 
+
     ul.appendChild(createli) 
     document.getElementById('input').value=""  
     }
