--- a/Images/movie.html
+++ b/Images/movie.html
@@ -182,7 +182,7 @@
         // var TotalPrice = document.getElementById('price').innerHTML=payprice
         // document.getElementById("name").innerHTML=movien
 
-        var movieName = document.getElementById("mn").innerHTML=movien;
+        var movie = document.getElementById("mn").innerHTML=movien;
     }
 
    
