--- a/Images/RegistrationForm.html
+++ b/Images/RegistrationForm.html
@@ -101,27 +101,27 @@ form .gender-details .gender-title{
             <div class="user-details">
                 <div class="input-box">
                     <span class="details">Full Name</span>
-                    <input required type="text" placeholder="Enter Your Name">
+                    <input  type="text" id="name" placeholder="Enter Your Name">
                 </div>
                 <div class="input-box">
                     <span class="details">User Name</span>
-                    <input required type="text" placeholder="Enter UserName">
+                    <input type="text" placeholder="Enter UserName">
                 </div>
                 <div class="input-box">
                     <span class="details">Email</span>
-                    <input required type="text" placeholder="Enter your Email">
+                    <input type="text" placeholder="Enter your Email">
                 </div>
                 <div class="input-box">
                     <span class="details">Phone Number</span>
-                    <input required type="number" placeholder="Enter Phone number">
+                    <input  type="number" placeholder="Enter Phone number">
                 </div>
                 <div class="input-box">
                     <span class="details">Password</span>
-                    <input required type="password" placeholder="Enter Your Password">
+                    <input type="password" placeholder="Enter Your Password">
                 </div>
                 <div class="input-box">
                     <span class="details">Confirm Password</span>
-                    <input required type="password" placeholder="Confirm Your Password">
+                    <input type="password" placeholder="Confirm Your Password">
                 </div>
                 <div class="gender-details">
                     <div class="gender-title">Gender</div>
@@ -149,11 +149,26 @@ form .gender-details .gender-title{
                         <label for="Perfer not to say">Prefer not to say</label>
                     </div>
                 </div>
-                <div class="button">
+                <div onclick="submit()" class="button">
                     <input type="submit" value="Register">
                 </div>
             </div>
         </form>
     </div>
+    <script>
+        function submit(){
+          console.log('submit') 
+          
+          var fullname = document.getElementById('name').value;
+          npattern = /^[a-zA-Z ]+$/;
+          if(fullname == ""){
+              alert("Enter the Full name")
+          }else if(npattern.test(fullname)){
+              alert("your name is  :"+fullname)
+          }else{
+              alert("Enter valid name")
+          }
+        }
+    </script>
 </body>
 </html>
