--- a/Images/RegistrationForm.html
+++ b/Images/RegistrationForm.html
@@ -16,6 +16,10 @@
 
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </head>
 <style>
     * {
@@ -35,7 +39,7 @@
         /* background: rgb(2,0,36);
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(61,61,199,1) 35%, rgba(54,155,176,1) 100%); */
 background: rgb(131,58,180);
-background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+background: linear-gradient(115deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
     }
 
     .title {
@@ -156,7 +160,7 @@ background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%,
                             <span class="dot-one"></span>
                             <span class="gender">Prefer Not To Say</span>
                         </label> -->
-                    <input type="radio"  name="gender" id="r1" value="male">Male
+                    <input type="radio"  name="gender" id="r1" value="Male">Male
                     <input type="radio"  name="gender" id="r2" value="Female">female
                     <input type="radio"  name="gender" id="r3" value="Prefer not to say">Prefer not to say
                     <!-- <label for="Male">Male</label> -->
@@ -277,6 +281,8 @@ background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%,
             // })
             //     .then((response) => response.json())
             //     .then((json) => console.log(json));   
+
+            
         }
     </script>
 </body>
