--- a/IndiaToday.html
+++ b/IndiaToday.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="All about india today news,info,business,movies,sports,health and more">
+    <meta name="keywords" content="Latest News,Live News ">
+    <meta property="og:description" content="India Today|News|Live-Tv.">
     <title>IndiaToday</title>
     <link rel="stylesheet" href="css/style.css">
 
@@ -14,6 +17,7 @@
 
 
         <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
+        <title>India Today|News|Live-Tv</title>
 </head>
 
 <body>
